plugins {
    id 'java'
    id 'application'
    id "com.github.johnrengelman.shadow" version "6.0.0"
    id 'info.solidsoft.pitest' version '1.5.1'
    id 'se.patrikerdes.use-latest-versions' version '0.2.14'
    id 'com.github.ben-manes.versions' version '0.28.0'
}


apply plugin: 'java'
apply plugin: 'idea'

mainClassName = "core.Chuu"

group 'ish'
version '1.0'
apply plugin: 'java'

sourceCompatibility = 11
targetCompatibility = 11

repositories {
    mavenCentral()
    jcenter()

}
compileJava {
    options.compilerArgs += ["-Xlint:deprecation"]
}
//test {
//    jvmArgs '--enable-preview'
//}
compileJava.options.encoding = 'UTF-8'


dependencies {
// https://mvnrepository.com/artifact/org.knowm.xchart/xchart
    compile group: 'org.knowm.xchart', name: 'xchart', version: '3.6.4'
    compile 'se.michaelthelin.spotify:spotify-web-api-java:6.1.0'

// https://mvnrepository.com/artifact/com.mchange/c3p0
// https://mvnrepository.com/artifact/se.michaelthelin.spotify/spotify-web-api-java
    compile 'ch.qos.logback:logback-classic:1.3.0-alpha5'
// https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12
// https://mvnrepository.com/artifact/org.slf4j/slf4j-jdk14
    compile group: 'org.postgresql', name: 'postgresql', version: '42.2.14'

    implementation 'com.neovisionaries:nv-i18n:1.27'

    testCompile group: 'junit', name: 'junit', version: '4.13'

    compile 'net.dv8tion:JDA:4.2.0_169'

    compile group: 'commons-httpclient', name: 'commons-httpclient', version: '3.1'
// https://mvnrepository.com/artifact/org.apache.commons/commons-collections4
    compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'


// https://mvnrepository.com/artifact/c3p0/c3p0
// https://mvnrepository.com/artifact/com.github.jengelman.gradle.plugins/shadow

    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.20'
    compile group: 'org.json', name: 'json', version: '20200518'

    //For Youtube search api
    compile 'com.google.api-client:google-api-client:1.30.9'
    compile 'com.google.apis:google-api-services-youtube:v3-rev20200618-1.30.9'
    compile 'com.google.oauth-client:google-oauth-client-jetty:1.31.0'
    compile 'org.beryx:awt-color-factory:1.0.1'

// https://mvnrepository.com/artifact/com.twelvemonkeys.imageio/imageio-jpeg
    compile group: 'com.twelvemonkeys.imageio', name: 'imageio-core', version: '3.5'
    compile group: 'com.twelvemonkeys.imageio', name: 'imageio-jpeg', version: '3.5'
    //String  difference
    compile group: 'org.apache.commons', name: 'commons-text', version: '1.8'
    //Rescaler
    compile group: 'org.imgscalr', name: 'imgscalr-lib', version: '4.2'

    compile group: 'org.apache.xmlgraphics', name: 'batik-transcoder', version: '1.13'

    compile group: 'org.apache.xmlgraphics', name: 'batik-codec', version: '1.13'
// https://mvnrepository.com/artifact/org.apache.xmlgraphics/batik-svggen
    compile group: 'org.apache.xmlgraphics', name: 'batik-svggen', version: '1.13'
// https://mvnrepository.com/artifact/com.zaxxer/HikariCP
    compile group: 'com.zaxxer', name: 'HikariCP', version: '3.4.5'
// https://mvnrepository.com/artifact/org.awaitility/awaitility
    testCompile group: 'org.awaitility', name: 'awaitility', version: '4.0.3'
    testCompile group: 'com.openpojo', name: 'openpojo', version: '0.8.13'
// https://mvnrepository.com/artifact/org.ow2.asm/asm
    testCompile group: 'org.ow2.asm', name: 'asm', version: '8.0.1'

// https://mvnrepository.com/artifact/org.graphwalker/graphwalker-core
    testCompile group: 'org.graphwalker', name: 'graphwalker-core', version: '4.2.0'
// https://mvnrepository.com/artifact/org.graphwalker/graphwalker-java
    // group: 'org.graphwalker', name: 'graphwalker-java', version: '4.1.0'

// https://mvnrepository.com/artifact/com.pholser/junit-quickcheck-core
    //a
    testCompile group: 'com.pholser', name: 'junit-quickcheck-core', version: '0.9.2'
    testCompile "org.mockito:mockito-core:3.3.3"


}
